[package]
name = "futurist_ssp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version =  "4.0", default-features = false, features = ["rustls", "macros"] }
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"] }
scraper = "0.12"
regex = "1.5"
serde = { version = "1.0.193", features = ["derive"] }
actix-cors = "0.6.4"
url = "2.2.2"
serde_json = "1.0.111"
dotenv = "0.15.0"

[profile.release]
debug = false
codegen-units = 128
lto = false
opt-level = 1
